# kube-secretmap

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md  Tiltfile  build.rs  example.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  new-provider.yml  question.yml
examples/: create-secret.rs  existing-secret.rs
generators/crd/: Cargo.toml
generators/crd/src/: examples.rs  lib.rs  provider.rs
manifests/: Deployment.yml  SecretMap.crd.yml
manifests/crds/: SecretMap.crd.yml  kustomization.yml
manifests/examples/: aws-example-overwrite.yml  aws-example.yml  kustomization.yml  static-example-overwrite.yml  static-example.yml
manifests/install/: clusterrole.yml  clusterrolebinding.yml  deployment.yml  kustomization.yml  service.yml  serviceaccount.yml
src/: finalizer.rs  main.rs  manager.rs  metrics_server.rs
src/provider/: mod.rs
