[package]
name = "kube-secretmap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
crd = { path = "./generators/crd" }
futures = "0.3.21"
k8s-openapi = "0.15.0"
kube = { version = "0.73.0", features = ["runtime", "client", "derive"] }
thiserror = "1.0.31"
anyhow = "1.0.57"
tokio = { version = "1.18.2",  features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.17.2"
opentelemetry = { version = "0.17.0", features = ["trace", "rt-tokio"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = {version = "1.0.37", features = ["derive"]}
serde_json = "1.0.81"

[build-dependencies]
crd = { path = "./generators/crd" }
kube = { version = "0.73.0", default-features = true, features = ["derive"] }
serde_yaml = "0.8.24"
